--- a/views/index.erb
+++ b/views/index.erb
@@ -6,5 +6,5 @@
     <label for="anagram1">Enter the second word you'd like to check to see if it's an anagram!:</label>
     <input id="anagram1" name="anagram1" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn-success">Anagramatic go!!</button>
+  <button type="submit" class="btn-success">Anagramatic go!</button>
 </form>
